--- a/app/views/afiliados/index.html.erb
+++ b/app/views/afiliados/index.html.erb
@@ -1,7 +1,3 @@
-<%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-<%= simple_form_for @user do |f| %>
-  <%= f.input :password, hint: 'No special characters.' %>
-  <%= f.input :email, placeholder: 'user@domain.com' %>
-  <%= f.input :remember_me, inline_label: 'Yes, remember me' %>
-  <%= f.button :submit %>
-<% end %>
+<div>
+	
+</div>
